samples/_failures_safe/1761341593_fdccba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2068796f.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_2068796f.c:153:13: error: expected declaration or statement at end of input
  153 |             case TOKEN_IDENTIFIER: type_str = "IDENTIFIER";
      |             ^~~~
./samples/SAFE/__tmp_2068796f.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2068796f.c:153:13: error: expected declaration or statement at end of input
